--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "mongoose-paginate-v2": "^1.3.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.1",
+    "nodemon": "^1.19.3",
     "nodemailer-mailgun-transport": "^1.4.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "pm2": "^4.1.2",
     "remark-cli": "^7.0.0",
     "request-ip": "^2.1.3",
     "trim-request": "^1.0.6",
