--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ EMAIL_FROM_NAME=My Project
 EMAIL_FROM_ADDRESS=info@myproject.com
 EMAIL_SMTP_DOMAIN_MAILGUN=myproject.com
 EMAIL_SMTP_API_MAILGUN=123456
-FRONTEND_URL=http://localhost/
+FRONTEND_URL=https://ciconia-server.herokuapp.com
 USE_REDIS=false
-REDIS_HOST=https://ciconia-server.herokuapp.com/
+REDIS_HOST=https://ciconia-server.herokuapp.com
 REDIS_PORT=6379
