--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ EMAIL_FROM_ADDRESS=info@myproject.com
 EMAIL_SMTP_DOMAIN_MAILGUN=myproject.com
 EMAIL_SMTP_API_MAILGUN=123456
 FRONTEND_URL=https://ciconia-server.herokuapp.com
-USE_REDIS=false
+USE_REDIS=true
 REDIS_HOST=https://ciconia-server.herokuapp.com
 REDIS_PORT=6379
