--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ EMAIL_FROM_ADDRESS=info@myproject.com
 EMAIL_SMTP_DOMAIN_MAILGUN=myproject.com
 EMAIL_SMTP_API_MAILGUN=123456
 FRONTEND_URL=http://ciconia-ciconia.apps.us-west-2.starter.openshift-online.com/
-USE_REDIS=true
-REDIS_HOST=http://ciconia-ciconia.apps.us-west-2.starter.openshift-online.com/
+USE_REDIS=false
+REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
